[package]
name = "test-log-macros"
version = "0.2.16"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
rust-version = "1.71"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/d-e-s-o/test-log.git"
description = """
Supporting procedural macro crate for test-log.
"""

[lib]
proc-macro = true

[features]
trace = []
log = []
unstable = []

[dependencies]
